--- a/README
+++ b/README
@@ -3,10 +3,10 @@ sparse matrix manipulation in Python. It provides routines that are
 not suitable for inclusion in scipy.sparse proper, usually because
 they are GPL'ed.
 
-.. note::
-   This library is solid and works well, but since I no longer use it
-   myself I no longer have time to maintain it, and am looking for a
-   volunteer to take over. If interested, email njs@pobox.com.
+NOTE:
+  This library is solid and works well, but since I no longer use it
+  myself I no longer have time to maintain it, and am looking for a
+  volunteer to take over. If interested, email njs@pobox.com.
 
 So far it just contains a wrapper for the CHOLMOD library for sparse
 cholesky decomposition. Further contributions are welcome!
