--- a/README
+++ b/README
@@ -1,25 +1,21 @@
-This is scikits.sparse, a companion to the scipy.sparse library for
+This is scikit-sparse, a companion to the scipy.sparse library for
 sparse matrix manipulation in Python. It provides routines that are
 not suitable for inclusion in scipy.sparse proper, usually because
 they are GPL'ed.
 
 NOTE:
-  This library is solid and works well, but since I no longer use it
-  myself I no longer have time to maintain it, and am looking for a
-  volunteer to take over. If interested, email njs@pobox.com.
+  This library is solid and works well, but no longer actively
+  developed. Please let us know if you wish to take over development.
 
 So far it just contains a wrapper for the CHOLMOD library for sparse
 cholesky decomposition. Further contributions are welcome!
 
 Manual:
-  http://packages.python.org/scikits.sparse/
+  http://pythonhosted.org/scikit-sparse/
 Homepage:
-  https://github.com/njsmith/scikits-sparse
+  https://github.com/scikit-sparse/scikit-sparse
 Bug tracker:
-  https://github.com/njsmith/scikits-sparse/issues
-Mailing list:
-  scikits-sparse-discuss@lists.vorpus.org
-  http://lists.vorpus.org/cgi-bin/mailman/listinfo/scikits-sparse-discuss
+  https://github.com/scikit-sparse/scikit-sparse/issues
 
 For more details, including dependencies and installation
 instructions, see doc/overview.rst.
@@ -39,6 +35,7 @@ commercial license.)
 
     scikits.sparse
     Copyright (c) 2009, Nathaniel Smith <njs@pobox.com>
+    Copyright (c) 2016, Antony Lee <anntzer.lee@gmail.com>
     All rights reserved.
 
     Redistribution and use in source and binary forms, with or without
